--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base
+@tailwind components
+@tailwind utilities
+@import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Extended&display=swap')
+
