implemented dark mode for home page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,14 @@
-<footer
-  class="text-white font-gothicNew flex flex-col justify-center items-center py-8"
->
-  <!-- contact -->
-  <div class="block tracking-wider font-light text-sm mb-3">CONTACT</div>
-  <ul
-    id="footer-links"
-    class="flex flex-row text-xs font-thin mb-10 tracking-widest"
-  >
-    <li>INSTAGRAM</li>
-    <li>FACEBOOK</li>
-    <li>LINKED IN</li>
-    <li>BEHANCE</li>
-  </ul>
-  <div class="font-thin text-[10px] tracking-wider flex flex-row items-center">
-    <span class="text-sm pr-1">&#169;</span>
-    <span>2024 EVIL CORPORATION</span>
-  </div>
+<footer class="text-white dark:text-secondary bg-sucess dark:bg-unsucess font-gothicNew flex flex-col justify-center items-center py-8">
+    <!-- contact -->
+    <div class="block tracking-wider font-light text-sm mb-3">CONTACT</div>
+    <ul id="footer-links" class="flex flex-row text-xs font-thin mb-10 tracking-widest">
+        <li>INSTAGRAM</li>
+        <li>FACEBOOK</li>
+        <li>LINKED IN</li>
+        <li>BEHANCE</li>
+    </ul>
+    <div class="font-thin text-[10px] tracking-wider flex flex-row items-center">
+        <span class="text-sm pr-1">&#169;</span>
+        <span>2024 EVIL CORPORATION</span>
+    </div>
 </footer>
