--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,4 +6,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Extended&display=swap')
 
 
-
+*
+    transition: background 1000ms ease, color 100ms ease, border 1000ms ease, width 1000ms ease, filter 1000ms ease
