--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main class="font-gothicNew text-white tracking-wider">
+<main class="font-gothicNew text-white tracking-wider pb-44">
   <router-outlet></router-outlet>
 </main>
 
