--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-white dark:text-secondary bg-sucess dark:bg-unsucess font-gothicNew flex flex-col justify-center items-center py-8">
+<footer class="text-white dark:text-secondary bg-sucess dark:bg-unsucess font-gothicNew flex flex-col justify-center items-center py-8 absolute w-full bottom-0 start-0">
     <!-- contact -->
     <div class="block tracking-wider font-light text-sm mb-3">CONTACT</div>
     <ul id="footer-links" class="flex flex-row text-xs font-thin mb-10 tracking-widest">
