--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="flex font-gothicNew">
+<nav class="flex font-gothicNew absolute top-0 start-0 w-full sticky z-20">
     <ul class="flex flex-row items-center self-center w-full h-12 bg-white dark:bg-primary">
         <li class="px-3 h-full flex items-center text-primary dark:text-secondary" routerLink="./home" routerLinkActive="bg-gray">
             HOME
