--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 <section class="px-3 pt-3 pb-4 text-black dark:text-secondary bg-white dark:bg-primary">
     <section class="grid home-grid gap-2">
         <div id="profile-img" class="h-48">
-            <img id="profile-pic" src="assets/elektrobild_4.png" alt="profile_picture" class="h-full object-cover brightness-[175%] saturate-150 contrast-75 -hue-rotate-15 dark:saturate-100 dark:contrast-100 dark:brightness-100 dark:hue-rotate-0" />
+            <app-personals></app-personals>
         </div>
         <article id="profile-info" class="border border-black dark:border-secondary px-2 pt-2 pb-3 flex flex-col justify-between wrap">
             <section class="flex flex-row justify-between items-center">
