--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,4 +7,4 @@
 
 
 *
-    transition: background 1000ms ease, color 100ms ease, border 1000ms ease, width 1000ms ease, filter 1000ms ease
+    transition: background 1000ms ease, color 100ms ease, border 1000ms ease, width 1000ms ease, filter 1000ms ease, transform 300ms ease, opacity 150ms ease, height 150ms linear
