Completed UI for mobile view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="h-16 bg-sucess dark:bg-unsucess text-white dark:text-secondary w-full flex flex-row justify-between items-center px-3">
+<app-banner-wrapper>
     <div class="flex flex-col items-start gap-1">
         <span class="font-light text-xs">DEVELOPER</span>
         <span class="text-xl">C 38NT3 A7</span>
@@ -7,7 +7,7 @@
         <span class="font-light text-xs">ACCESS</span>
         <span class="text-base">**********</span>
     </div>
-</section>
+</app-banner-wrapper>
 <section class="px-3 pt-3 pb-4 text-black dark:text-secondary bg-white dark:bg-primary">
     <section class="grid home-grid gap-2">
         <div id="profile-img" class="h-48">
@@ -81,7 +81,7 @@
             <div class="mb-3">
                 <span class="tracking-widest font-bold">INTEREST</span>
             </div>
-            <ul class="text-sm text-sm font-light mb-3">
+            <ul class="text-sm font-light mb-3">
                 <li>Drawing 2D Illustration</li>
                 <li>Learning UNIX/LINUX</li>
                 <li>Trekking and Camping</li>
