--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,13 @@
-<p>projects works!</p>
+<section>
+    <app-banner-wrapper>
+        <span class="text-white dark:text-secondary text-xl font-thin">
+      PROJECTS
+    </span>
+    </app-banner-wrapper>
+</section>
+<section class="flex flex-col gap-4 px-4 my-6">
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+</section>
